--- a/doc/common.bib
+++ b/doc/common.bib
@@ -22,3 +22,16 @@
   publisher      = {University of California, Irvine},
   year           = 2003
 }
+@misc{pynew,
+  title = {{Pygame} Newbieguide},
+  howpublished = {\url{http://www.pygame.org/docs/tut/newbieguide.html}},
+  note = {Accessed: 31.1.2013}
+}
+@article{pybrain2010jmlr,
+    Author = {Schaul, Tom and Bayer, Justin and Wierstra, Daan and Sun, Yi and 
+              Felder, Martin and Sehnke, Frank and R{\"u}ckstie{\ss}, Thomas and Schmidhuber, J{\"u}rgen},
+    Journal = {Journal of Machine Learning Research},
+    Pages = {743--746},
+    Title = {{PyBrain}},
+    Volume = {11},
+    Year = {2010}}
