--- a/doc/common.bib
+++ b/doc/common.bib
@@ -11,7 +11,9 @@
 
 @MISC{bitcoin,
     author = {Satoshi Nakamoto},
-    title = {Bitcoin: A peer-to-peer electronic cash system,” http://bitcoin.org/bitcoin.pdf},
+    title = {Bitcoin: A peer-to-peer electronic cash system” },
+    howpublished = {\url{http://bitcoin.org/bitcoin.pdf}},
+    note = {Accessed: 31.1.2013},
     year = {}
 }
 @TechReport{Chong,
